<resources>
    <string name="app_name">Robin!</string>
    <string name="New_Class_Butt">New Class</string>
    <string name="New_Due_Date_Butt">New Due Date</string>
    <string name="Class_Name_Edit">Class Name</string>
    <string name="Start_Date_Edit">Start Date</string>
    <string name="End_Date_Edit">End Date</string>
    <string name="Sect_Title">New Section</string>
    <string name="Time_Edit">Start Time</string>
    <string name="Duration_Edit">End Time</string>
    <string name="Add_Info_Butt">ADD</string>
    <string name="Existing_Sections_Text">Existing Sections</string>
    <string name="Set_Class_Butt">Set Class</string>
    <string-array name="day_drop">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
    <string-array name="Class_type_drop">
        <item>Lecture</item>
        <item>Lab</item>
        <item>Discussion</item>
    </string-array>
    <string-array name="AM_OR_PM">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Assign_Name">Name</string>
    <string name="multiplier">Multiplier</string>
    <string name="Done_Butt">Done</string>
    <string name="Done_Assign_Butt">Done</string>
    <string name="Add_Assign_Butt">Add Assignment</string>
    <string name="right_butt"><![CDATA[>]]></string>
    <string name="left_butt"><![CDATA[<]]></string>
    <string name="delete_butt">Delete...</string>
    <string name="addHW_butt">Add Study Time</string>
    <string name="delete_course_butt">Delete Course</string>
    <string name="done_butt">Done</string>
    <string name="Repeat_Check_Box">Repeat Weekly</string>
    <string name="Weather_butt">Weather</string>
    <string name="start_time_HW">Start Time</string>
    <string name="end_time_HW">End Time</string>
    <string name="set_zip_butt">Set Zipcode</string>
    <string name="hw_plan_butt">Plan HW Time</string>
    <string name="delete_study_time">Delete Study Time</string>
    <string name="help">HELP</string>
    <string name="Help_text">Hey there User!!! \n here\'s some help for using the app
    \n\n-Add Course: Here is where you can add new courses to your schedule. You enter the name, multiplier (difficulty, necessary for future versions of Robin), start date, and end date to "set" the class. Next, you add all of the meeting times for lectures, labs, and discussions of that course before pressing the done button.
    \n\n-Add Assignent: This page allows you to add multiple duedates for different classes to your schedule all at once. Simply enter the type of assignment, name, class, and date and click "add assignment". Repeat this process as many times as you would like and then click "done" to see all the new duedates appear on your schedule on the main screen.
    \n\n-Add HW Time: This button allows you to set aside specific chunks of times during which you will study. Just enter the time, name, and date and click the "add" button.
    \n\n-Weather: The weather feature of Robin provides a current weather report as well as clothing recommendations based on temperature and conditions. Simply enter your zipcode and press the button!
    \n\n-Delete: The delete button allows you to remove any course, assignment, or study time that you no longer need.
</string>
    <string-array name="Assignment_Types">
        <item>Assignment</item>
        <item>Exam</item>
        <item>Lab Report</item>
    </string-array>
</resources>
